login and logout functionality added.

--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -1,6 +1,7 @@
 {% extends "users/layout.html" %}
 
 {% block body %}
- <h2> Home page of my website</h2>
+ <h2> Home page of {{ user.username }}</h2>
+
 
 {%endblock%}
