course app is added.

--- a/users/templates/users/layout.html
+++ b/users/templates/users/layout.html
@@ -822,6 +822,8 @@
 
     <!-- Demo Js -->
     <script src="{% static 'js/demo.js'%}"></script>
+  {% block extrajs %}
+  {% endblock %}
 </body>
 
 </html>
