--- a/users/templates/users/layout.html
+++ b/users/templates/users/layout.html
@@ -27,6 +27,9 @@
 
     <!-- AdminBSB Themes. You can choose a theme from css/themes instead of get all themes -->
     <link href="{% static 'css/themes/all-themes.css'%}" rel="stylesheet" />
+
+    {% block extracss %}
+    {% endblock %}
 </head>
 
 <body class="theme-red">
@@ -294,149 +297,24 @@
             </div>
             <!-- #User Info -->
             <!-- Menu -->
-           {% comment %} <div class="menu">
+            <div class="menu">
                 <ul class="list">
                     <li class="header">MAIN NAVIGATION</li>
-                    <li>
-                        <a href="../../index.html">
-                            <i class="material-icons">home</i>
-                            <span>Home</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../../pages/typography.html">
-                            <i class="material-icons">text_fields</i>
-                            <span>Typography</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../../pages/helper-classes.html">
-                            <i class="material-icons">layers</i>
-                            <span>Helper Classes</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0);" class="menu-toggle">
-                            <i class="material-icons">widgets</i>
-                            <span>Widgets</span>
-                        </a>
-                        <ul class="ml-menu">
-                            <li>
-                                <a href="javascript:void(0);" class="menu-toggle">
-                                    <span>Cards</span>
-                                </a>
-                                <ul class="ml-menu">
-                                    <li>
-                                        <a href="../../pages/widgets/cards/basic.html">Basic</a>
-                                    </li>
-                                    <li>
-                                        <a href="../../pages/widgets/cards/colored.html">Colored</a>
-                                    </li>
-                                    <li>
-                                        <a href="../../pages/widgets/cards/no-header.html">No Header</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);" class="menu-toggle">
-                                    <span>Infobox</span>
-                                </a>
-                                <ul class="ml-menu">
-                                    <li>
-                                        <a href="../../pages/widgets/infobox/infobox-1.html">Infobox-1</a>
-                                    </li>
-                                    <li>
-                                        <a href="../../pages/widgets/infobox/infobox-2.html">Infobox-2</a>
-                                    </li>
-                                    <li>
-                                        <a href="../../pages/widgets/infobox/infobox-3.html">Infobox-3</a>
-                                    </li>
-                                    <li>
-                                        <a href="../../pages/widgets/infobox/infobox-4.html">Infobox-4</a>
-                                    </li>
-                                    <li>
-                                        <a href="../../pages/widgets/infobox/infobox-5.html">Infobox-5</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
+
+
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle">
                             <i class="material-icons">swap_calls</i>
-                            <span>User Interface (UI)</span>
+                            <span>Course</span>
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="../../pages/ui/alerts.html">Alerts</a>
+                                <a href="{% url 'new-course' %}">New</a>
                             </li>
                             <li>
-                                <a href="../../pages/ui/animations.html">Animations</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/badges.html">Badges</a>
+                                <a href="{% url 'list-course' %}">List</a>
                             </li>
 
-                            <li>
-                                <a href="../../pages/ui/breadcrumbs.html">Breadcrumbs</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/buttons.html">Buttons</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/collapse.html">Collapse</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/colors.html">Colors</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/dialogs.html">Dialogs</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/icons.html">Icons</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/labels.html">Labels</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/list-group.html">List Group</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/media-object.html">Media Object</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/modals.html">Modals</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/notifications.html">Notifications</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/pagination.html">Pagination</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/preloaders.html">Preloaders</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/progressbars.html">Progress Bars</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/range-sliders.html">Range Sliders</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/sortable-nestable.html">Sortable & Nestable</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/tabs.html">Tabs</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/thumbnails.html">Thumbnails</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/tooltips-popovers.html">Tooltips & Popovers</a>
-                            </li>
-                            <li>
-                                <a href="../../pages/ui/waves.html">Waves</a>
-                            </li>
                         </ul>
                     </li>
                     <li>
@@ -633,7 +511,7 @@
                         </a>
                     </li>
                 </ul>
-            </div>{% endcomment %}
+            </div>
             <!-- #Menu -->
             <!-- Footer -->
             <div class="legal">
