course detail and deleteview added.

--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -58,6 +58,8 @@
                                                 <td>{{ course.fees }}</td>
                                                 <td>
                                                     <a href="{% url 'update-course' course.id %}" class="btn btn-primary">Update</a>
+                                                    <a href="{% url 'detail-course' course.id %}" class="btn btn-info">Detail</a>
+                                                    <a href="{% url 'delete-course' course.id %}" class="btn btn-danger">Delete</a>
                                                 </td>
                                             </tr>
                                         {% endfor %}
