rest api added.

--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -3,7 +3,7 @@
 {% block extracss %}
      <!-- JQuery DataTable Css -->
     <link href="{% static 'plugins/jquery-datatable/skin/bootstrap/css/dataTables.bootstrap.css'%}" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.min.css">
 {% endblock %}
 {% block body %}
     <!-- Basic Examples -->
@@ -29,28 +29,30 @@
                         </div>
                         <div class="body">
                             <div class="table-responsive">
-                                <table class="table table-bordered table-striped table-hover js-basic-example dataTable">
+                                <table id="ex" class="table table-bordered table-striped table-hover js-basic-example dataTable">
                                     <thead>
                                         <tr>
+                                            <th>id</th>
                                             <th>Name</th>
                                             <th>Descriptions</th>
                                             <th>Durations</th>
                                             <th>Fees</th>
-                                            <th>Action</th>
+
 
                                         </tr>
                                     </thead>
                                     <tfoot>
                                         <tr>
+                                            <th>id</th>
                                             <th>Name</th>
                                             <th>Descriptions</th>
                                             <th>Durations</th>
                                             <th>Fees</th>
-                                            <th>Action</th>
+
                                         </tr>
                                     </tfoot>
-                                    <tbody>
-                                        {% for course in courselist %}
+                                    <tbody >
+                                      {% comment %}  {% for course in courselist %}
                                             <tr>
                                                 <td><a href="{% url 'update-course' course.id %}" >{{ course.name }}</a></td>
                                                 <td>{{ course.descriptions |safe }}</td>
@@ -62,7 +64,7 @@
                                                     <a href="{% url 'delete-course' course.id %}" class="btn btn-danger">Delete</a>
                                                 </td>
                                             </tr>
-                                        {% endfor %}
+                                        {% endfor %}{% endcomment %}
                                     </tbody>
                                 </table>
                             </div>
@@ -73,8 +75,14 @@
             <!-- #END# Basic Examples -->
 {% endblock %}
 
+
+
+
 {% block extrajs %}
      <!-- Jquery DataTable Plugin Js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
+
     <script src="{% static 'plugins/jquery-datatable/jquery.dataTables.js'%}"></script>
     <script src="{% static 'plugins/jquery-datatable/skin/bootstrap/js/dataTables.bootstrap.js'%}"></script>
     <script src="{% static 'plugins/jquery-datatable/extensions/export/dataTables.buttons.min.js'%}"></script>
@@ -84,6 +92,60 @@
     <script src="{% static 'plugins/jquery-datatable/extensions/export/vfs_fonts.js'%} "></script>
     <script src="{% static 'plugins/jquery-datatable/extensions/export/buttons.html5.min.js' %}"></script>
     <script src="{% static 'plugins/jquery-datatable/extensions/export/buttons.print.min.js'%}"></script>
-     <script src="{% static 'js/pages/tables/jquery-datatable.js'%}"></script>
+     <script src="{% static 'js/pages/tables/jquery-datatable.js'%}">
+    </script>
 
+{% comment %}   <script>
+        document.addEventListener('DOMContentLoaded',function (){
+
+            fetch("http://127.0.0.1:8000/course/list")
+            .then(response=>response.json())
+            .then(function(res){
+                console.log(res.data);
+                let tbody=document.getElementById("tbody");
+                for (let i = 0; i < res.data.length; i++)
+                {
+                        let tr=document.createElement("tr");
+                        let name_td=document.createElement("td");
+                        let decriptions_td=document.createElement("td");
+                        let duration_td=document.createElement("td");
+                        let fees_td=document.createElement("td");
+                        let action_td=document.createElement("td");
+
+                        name_td.innerHTML=res.data[i].name;
+                        decriptions_td.innerHTML=res.data[i].descriptions;
+                        duration_td.innerHTML=res.data[i].duration;
+                        fees_td.innerHTML=res.data[i].fees;
+                        action_td.innerHTML="edit delete";
+
+                        tr.append(name_td);
+                        tr.append(decriptions_td);
+                        tr.append(duration_td);
+                        tr.append(fees_td);
+                        tr.append(action_td);
+                    tbody.append(tr);
+                }
+            })
+
+        })
+   </script>{% endcomment %}
+
+    <script>
+        $(document).ready(function() {
+            $('#ex').DataTable( {
+                 ajax:
+                     {
+                         url:'http://127.0.0.1:8000/course/list'
+                     },
+        columns: [
+            {data:"id"},
+        { data: "name" },
+        { data: "descriptions" },
+        { data: "duration" },
+        { data: "fees" }
+
+    ]
+    } );
+} );
+    </script>
 {% endblock %}
